--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "appy-comps",
-  "version": "1.0.0",
-  "description": "appy-comps React component",
+  "version": "0.0.3",
+  "description": "React Components for Application-style webapps",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
