--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
     "test:watch": "nwb test-react --server",
-    "publish": "npm run build && npm version patch && npm publish"
+    "do-publish": "npm run build && npm version patch && npm publish"
   },
   "dependencies": {},
   "peerDependencies": {
